# ObjectiveTerriFried

./: .clangd  .gitignore  CMakeLists.txt  README.md  license
ObjectiveTerriFried/: main.m  main.mm
ObjectiveTerriFried.xcodeproj/: project.pbxproj
ObjectiveTerriFried.xcodeproj/xcuserdata/maximiliangabriel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ObjectiveTerriFried.xcodeproj/xcuserdata/maximiliangabriel.xcuserdatad/xcschemes/: xcschememanagement.plist
ObjectiveTerriFried/engine/: Platform.mm  Player.h  Player.m  Player.mm  ScoreManager.mm
ObjectiveTerriFried/engine/include/: Platform.hpp  Player.h  Player.hpp  ScoreManager.hpp
ObjectiveTerriFried/engine/utility/: Constants.mm  SaveManager.mm  utility.h
ObjectiveTerriFried/engine/utility/include/: Constants.h  Constants.hpp  SaveManager.hpp  Utility.hpp  utility.h  utility.hpp
ObjectiveTerriFried/engine/wrappers/: NSEngineFont.mm  NSEngineImage.mm  NSEngineSound.mm  NSEngineTexture2D.mm  NSFont.mm  NSImage.mm  NSSound.mm  NSTexture2D.mm
ObjectiveTerriFried/engine/wrappers/include/: NSEngineFont.hpp  NSEngineImage.hpp  NSEngineSound.hpp  NSEngineTexture2D.hpp  NSFont.hpp  NSImage.hpp  NSSound.hpp  NSTexture2D.hpp
src/: main.mm
src/engine/: Platform.mm  Player.mm  ScoreManager.mm
src/engine/include/: Platform.hpp  Player.hpp  ScoreManager.hpp
src/engine/utility/: SaveManager.mm
src/engine/utility/include/: Constants.hpp  Utility.hpp
src/engine/wrappers/: NSEngineFont.mm  NSEngineImage.mm  NSEngineSound.mm  NSEngineTexture2D.mm
src/engine/wrappers/Protocols/: NSEngineResource.hpp
(+4 files in other folders)
